Fixed align

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -147,6 +147,7 @@ body {
       justify-content: space-between;
       @media (min-width: 768px) {
         direction: ltr;
+        justify-content: normal;
       }
     }
     a {
